--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,9 +13,14 @@
   border-radius: 50%;
   background-color: #f2e583;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
   box-shadow: 1px 1px 1px  grey;
 
+}
+
+p {
+  font-family: Lato;
 }
